# FederatedScope

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  LICENSE  README-main.md  README.md  TestCI.py  _cal.py  client.py  evaluations.py  heterolora.py  main.py  meta.yaml  regression.sh  requirements.txt  run_exp.sh  run_reorganized_standalone.sh  server.py  setup.py
.github/: release-drafter.yml
FS-Device-MNN/: README.md
FSDevice_Scripts/: 02_setup_device.py  03_stop_emulator.py  README.md  cfg.py  setup_environment.sh  start_client.py  start_emulator.py  start_simulation.sh  stop_emulator.sh
FsOnAndroid/: README.md  local.properties  settings.gradle
FsOnAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
FsOnAndroid/app/src/main/cpp/include/MNN/ciscripts/Windows/: x64.bat  x86.bat
FsOnAndroid/app/src/main/cpp/include/MNN/cmake/: windows_x64_travis.bat  windows_x86_travis.bat
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_32/: CMakeCache.txt  GetMNNInfo  MNNV2Basic.out  Makefile  ModuleBasic.out  SequenceModuleTest.out  aoa_nlu_decoder1.out  aoa_nlu_decoder2.out  aoa_nlu_encoder.out  backendTest.out  checkDir.out  checkFile.out  checkInvalidValue.out  cmake_install.cmake  dataTransformer.out  getPerformance.out  mobilenetTest.out  modelCompare.out  rawDataTransform.out  runTrainDemo.out  run_test.out  testModel.out  testModelWithDescrisbe.out  testModel_expr.out  testTrain.out  timeProfile.out  train.out  transformer.out  winogradExample.out  winogradGenerateCL.out  winogradGenerateGLSL.out
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_32/express/: Makefile  cmake_install.cmake
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_32/tools/converter/: Makefile  cmake_install.cmake
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_32/tools/cv/: Makefile  cmake_install.cmake
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_32/tools/train/: Makefile
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_64/: CMakeCache.txt  GetMNNInfo  MNNV2Basic.out  Makefile  ModuleBasic.out  SequenceModuleTest.out  aoa_nlu_decoder1.out  aoa_nlu_decoder2.out  aoa_nlu_encoder.out  backendTest.out  benchmark.out  benchmarkExprModels.out  checkDir.out  checkFile.out  checkInvalidValue.out  cmake_install.cmake  dataTransformer.out  getPerformance.out  mobilenetTest.out  modelCompare.out  rawDataTransform.out  runTrainDemo.out  run_test.out  testModel.out  testModelWithDescrisbe.out  testModel_expr.out  testTrain.out  timeProfile.out  train.out  transformer.out  winogradExample.out  winogradGenerateCL.out  winogradGenerateGLSL.out
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_64/express/: Makefile  cmake_install.cmake
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_64/tools/converter/: Makefile
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_64/tools/cv/: Makefile
FsOnAndroid/app/src/main/cpp/include/MNN/project/android/build_64/tools/train/: Makefile  cmake_install.cmake
FsOnAndroid/app/src/main/cpp/include/MNN/tools/converter/source/common/: cli.cpp
FsOnAndroid/app/src/main/cpp/include/MNN/tools/train/source/datasets/: CelebADataset.cpp  CelebADataset.hpp  FEMnistDataset.cpp  FEMnistDataset.hpp  TextDataset.cpp  TextDataset.hpp
FsOnAndroid/app/src/main/cpp/include/MNN/tools/train/source/optimizer/: FedBabuSGD.cpp  FedBabuSGD.hpp
data/: README.md
demo/: bbo.py  fedex_wrapper.py  synthetic.py
doc/: Makefile  README.md  make.bat  requirements-doc.txt  requirements.txt
docker_files/: README.md  federatedscope-torch1.10-application.Dockerfile  federatedscope-torch1.10.Dockerfile  federatedscope-torch1.8.Dockerfile
enviroment/: extra_dependencies_torch1.10-application.sh  requirements-torch1.10-application.txt  requirements-torch1.10.txt  requirements-torch1.8-application.txt
environment/: extra_dependencies_torch1.10-application.sh
fed_utils/: __init__.py  adaptive_peft.py  client.py  client_participation_scheduling.py  model_aggregation.py
federatedscope/: __init__.py  config.py  hpo.py  main.py  parse_exp_results.py  register.py
notebooks/: 01_quick_start.ipynb  02_start_your_own_case.ipynb  03_personalized_FL.ipynb
optimizers/: mezo_bias_optimizer.py  mezo_optimizer.py
rar/: default.sfx  makefile  order.htm  rar  rar.txt  rarfiles.lst  readme.txt  whatsnew.txt
scripts/: README.md  ci_test.sh  format.sh  gen_data.py  parse_exp_results_wandb.py  parse_per_client.py  run_distributed_conv_femnist.sh  run_distributed_lr.sh  run_femnist_on_cloud.sh  run_toy_on_cloud_sh
tests/: run.py  test_CRA_gan_attack.py  test_MIA_gradient_ascent.py  test_PIA_toy.py  test_asyn_cifar10.py  test_autotune.py  test_backdoor_attack.py  test_caesar_v_fl.py  test_differential_privacy.py  (+41 more)
(+7872 files in other folders)
